--- a/LLL/LLL/LLL.fsproj
+++ b/LLL/LLL/LLL.fsproj
@@ -8,12 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    
     <Compile Include="Core\Parser.fs" />
     <Compile Include="Core\ASDL.fs" />
     <Compile Include="Core\Machine.fs" />
+    <Compile Include="Core\CodeGen.fs" />
     <Compile Include="Entry.fs" />
-    
   </ItemGroup>
 
   <ItemGroup>
