--- a/LLL/LLL/LLL.fsproj
+++ b/LLL/LLL/LLL.fsproj
@@ -8,10 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Core\Parser.fs" />
+    <Compile Include="LLVM\Builder.fs" />
+    <Compile Include="LLVM\LLVM.fs" />
+    <Compile Include="LLVM\Emit.fs" />
+    <!--<Compile Include="Core\Parser.fs" />
     <Compile Include="Core\ASDL.fs" />
     <Compile Include="Core\Machine.fs" />
-    <Compile Include="Core\CodeGen.fs" />
+    <Compile Include="Core\CodeGen.fs" />-->
     <Compile Include="Entry.fs" />
   </ItemGroup>
 
