--- a/LLL/LLL/LLL.fsproj
+++ b/LLL/LLL/LLL.fsproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <Compile Include="LLVM\ML.fs" />
+    <Compile Include="LLVM\Helper.fs"/>
+    <Compile Include="LLVM\MLEmit.fs"/>
     <Compile Include="LLVM\LLVM.fs" />
     <Compile Include="LLVM\Emit.fs" />
     <!--<Compile Include="Core\Parser.fs" />
