--- a/LLL/LLL.fsproj
+++ b/LLL/LLL.fsproj
@@ -8,10 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="LLVM\ML.fs" />
-    <Compile Include="LLVM\Helper.fs"/>
-    <Compile Include="LLVM\MLEmit.fs"/>
-    <Compile Include="LLVM\LLVM.fs" />
+    <Compile Include="LLVM\IR.fs" />
+    <Compile Include="LLVM\Helper.fs" />
     <Compile Include="LLVM\Emit.fs" />
     <!--<Compile Include="Core\Parser.fs" />
     <Compile Include="Core\ASDL.fs" />
