graceful exception handling and error locating

--- a/LLAST/LLAST.fsproj
+++ b/LLAST/LLAST.fsproj
@@ -8,7 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    
     <Compile Include="LLVM\IR.fs" />
+    <Compile Include="LLVM\Infras.fs" />
+    <Compile Include="LLVM\Exc.fs" />
     <Compile Include="LLVM\Helper.fs" />
     <Compile Include="LLVM\Emit.fs" />
     <!--<Compile Include="Core\Parser.fs" />
