--- a/LLAST/LLAST.fsproj
+++ b/LLAST/LLAST.fsproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <NoWarn>62</NoWarn>
+    <NoWarn>62, 40</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     
