glisp has lambda

--- a/LLAST/.vscode/tasks.json
+++ b/LLAST/.vscode/tasks.json
@@ -8,6 +8,12 @@
             "type": "shell",
             "command": "rm ../ir-snippets/*;dotnet run;wsl ./test.sh ", //'lli ../ir-snippets/WhileTestToDouble.ll;echo $?;logout;'
             "problemMatcher": []
+        },
+        {
+            "label": "run parsers",
+            "type": "shell",
+            "command": "dotnet run",
+            "problemMatcher": []
         }
     ]
 }
