--- a/LLAST/Properties/launchSettings.json
+++ b/LLAST/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "LLAST": {
       "commandName": "Project",
-      "workingDirectory": "C:\\Users\\v-tiay\\LLAST\\LLAST"
+      "workingDirectory": "C:\\Users\\kameria\\LLAST\\LLAST"
     }
   }
 }
